cmake_minimum_required(VERSION 3.16)
project(AdventOfCode2021)

set(CMAKE_CXX_STANDARD 14)

add_executable(AdventOfCode2021 main.cpp Utils/Reader.cpp Utils/Reader.h Day1/D1.cpp Day1/D1.h Day2/D2.cpp Day2/D2.h Day3/D3.cpp Day3/D3.h Day4/D4.cpp Day4/D4.h Day5/D5.cpp Day5/D5.h Day6/D6.cpp Day6/D6.h Day7/D7.cpp Day7/D7.h Day8/D8.cpp Day8/D8.h Day9/D9.cpp Day9/D9.h Day10/D10.cpp Day10/D10.h Day11/D11.cpp Day11/D11.h Day12/D12.cpp Day12/D12.h Day13/D13.cpp Day13/D13.h Day14/D14.cpp Day14/D14.h Day15/D15.cpp Day15/D15.h Utils/Node.cpp Utils/Node.h)
